--- a/config/integrations/binary_sensor.yaml
+++ b/config/integrations/binary_sensor.yaml
@@ -1,9 +1,2 @@
 ---
-binary_sensor:
-  - platform: template
-    sensors:
-      next_alarm:
-        friendly_name: "Next Alarm"
-        value_template: >-
-          {{now().strftime("%a %h %d %H:%M %Z %Y") == (((state_attr('sensor.in2023_volgende_alarm', 'Time in Milliseconds')
-          | int / 1000) + 0*60 ) | timestamp_custom('%a %h %d %H:%M %Z %Y'))}}
+binary_sensor: !include_dir_merge_list ../entities/binary_sensors
