--- a/config/integrations/sensor.yaml
+++ b/config/integrations/sensor.yaml
@@ -1,7 +1,3 @@
 ---
-sensor:
-  - platform: p2000
-    name: Tilburg
-    regios: 20,21,22
-    disciplines: 1,2,3,4
-    radius: 10000
+sensor: !include_dir_merge_list ../entities/sensors
+
