✨ integrated reolink e1 camera

--- a/.stubs/secrets.yaml
+++ b/.stubs/secrets.yaml
@@ -1,2 +1,5 @@
 ---
+### Recorder Url
 recorder_url: mysql://username:password@core-mariadb/homeassistant?charset=utf8
+### Reolink Url
+reolink_url: rtsp://admin:password@ip_address:554//h264Preview_01_main
