🚨 fix yaml errors part 2

--- a/config/integrations/alert.yaml
+++ b/config/integrations/alert.yaml
@@ -8,13 +8,13 @@ alert:
     state: 'on'
     can_acknowledge: false
     repeat:
-    - 5
-    - 360
+      - 5
+      - 360
     skip_first: true
     title: 'Update for HA available'
     message: "New version is {{ state_attr('sensor.updater_core', 'newest_version') }}. Currently on {{ state_attr('sensor.updater_core', 'current_version') }}"
     notifiers:
-    - 'me'
+      - mobile_app_in2023
     data:
       tag: 'ha-update-available'
       url: 'http://hassio.local/hassio/addon/core_check_config'
@@ -29,7 +29,7 @@ alert:
     title: 'Update for HA Supervisor available'
     message: "New version is {{ state_attr('sensor.supervisor_updates', 'newest_version') }}. Currently on {{ state_attr('sensor.supervisor_updates', 'current_version') }}"
     notifiers:
-    - 'me'
+      - mobile_app_in2023
     data:
       tag: 'supervisor-update-available'
       url: 'http://hassio.local/hassio/dashboard'
@@ -44,7 +44,7 @@ alert:
     title: 'Update for HA Audio available'
     message: "New version is {{ state_attr('sensor.updater_audio', 'newest_version') }}. Currently on {{ state_attr('sensor.updater_audio', 'current_version') }}"
     notifiers:
-    - 'me'
+      - mobile_app_in2023
     data:
       tag: 'audio_update_available'
       url: 'http://hassio.local/hassio/dashboard'
@@ -59,7 +59,7 @@ alert:
     title: 'Update for HA DNS available'
     message: "New version is {{ state_attr('sensor.updater_dns', 'newest_version') }}. Currently on {{ state_attr('sensor.updater_dns', 'current_version') }}"
     notifiers:
-    - 'me'
+      - mobile_app_in2023
     data:
       tag: 'dns_update_available'
       url: 'http://hassio.local/hassio/dashboard'
@@ -74,7 +74,7 @@ alert:
     title: 'Update for HA CLI available'
     message: "New version is {{ state_attr('sensor.updater_cli', 'newest_version') }}. Currently on {{ state_attr('sensor.updater_cli', 'current_version') }}"
     notifiers:
-    - 'me'
+      - mobile_app_in2023
     data:
       tag: 'cli_update_available'
       url: 'http://hassio.local/hassio/dashboard'
@@ -89,7 +89,7 @@ alert:
     title: 'Update for HA Multicast available'
     message: "New version is {{ state_attr('sensor.updater_multicast', 'newest_version') }}. Currently on {{ state_attr('sensor.updater_multicast', 'current_version') }}"
     notifiers:
-    - 'me'
+      - mobile_app_in2023
     data:
       tag: 'multicast_update_available'
       url: 'http://hassio.local/hassio/dashboard'
@@ -104,7 +104,7 @@ alert:
     title: 'Update for HA Observer available'
     message: "New version is {{ state_attr('sensor.updater_observer', 'newest_version') }}. Currently on {{ state_attr('sensor.updater_observer', 'current_version') }}"
     notifiers:
-    - 'me'
+      - mobile_app_in2023
     data:
       tag: 'observer_update_available'
       url: '/hassio/dashboard'
@@ -119,7 +119,7 @@ alert:
     title: "Updates available in {{ states('sensor.hacs') }} HACS repo{% if states('sensor.hacs') | int > 1 %}s{% endif %}"
     message: ""
     notifiers:
-      - 'me'
+        - mobile_app_in2023
     data:
       tag: 'hacs-update-available'
       url: 'http://hassio.local/hacs/installed'
@@ -134,7 +134,7 @@ alert:
     title: "Updates available for {{ states('sensor.supervisor_updates') }} HA addon{% if states('sensor.supervisor_updates') | int > 1 %}s{% endif %}"
     message: ""
     notifiers:
-    - 'me'
+      - mobile_app_in2023
     data:
       tag: 'addon-update-available'
       url: 'http://hassio.local/hassio/dashboard'
