--- a/.github/workflows/home-assistant.yml
+++ b/.github/workflows/home-assistant.yml
@@ -46,3 +46,26 @@ jobs:
           path: "./config"
           secrets: ./.stubs/secrets.yaml
           version: "${{ matrix.version }}"
+
+  esphome:
+    runs-on: ubuntu-latest
+    needs: [yamllint]
+    steps:
+      - name: ⤵️ Check out configuration from GitHub
+        uses: actions/checkout@v1
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.7
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          pip install esphome
+          pip list
+          esphome version
+      - name: Copy stub files into configuration folder
+        run: cp -R ./.stubs/* ./config/esphome/
+      - name: Run esphome on all files
+        # yamllint disable rule:line-length
+        run: |
+          for file in $(find ./config/esphome -type f -name "*.yaml" -not -name "secrets.yaml"); do esphome "${file}" config; done
