🚀 updated stubs secrets

--- a/.stubs/secrets.yaml
+++ b/.stubs/secrets.yaml
@@ -1,5 +1,11 @@
 ---
-### Recorder Url
+# Recorder Url
 recorder_url: mysql://username:password@core-mariadb/homeassistant?charset=utf8
-### Reolink Url
+# Reolink Url
 reolink_url: rtsp://admin:password@ip_address:554//h264Preview_01_main
+# ESPHome
+toilet_fallback_ssid: AAAbbbCCC
+toilet_fallback_passwd: AAAbbbCCC
+# NOT network credentials
+not_ssid: AAAbbbCCC
+not_passwd: AAAbbbCCC
