fix yamllint error

--- a/config/esphome/Toilet Light.yaml
+++ b/config/esphome/Toilet Light.yaml
@@ -36,7 +36,7 @@ binary_sensor:
     pin:
       number: GPIO0
       mode: INPUT_PULLUP
-      inverted: True
+      inverted: 'true'
     on_press:
       - light.toggle: $devicename
 
