🔥 update fake secrets

--- a/.stubs/secrets.yaml
+++ b/.stubs/secrets.yaml
@@ -7,5 +7,6 @@ reolink_url: rtsp://admin:password@ip_address:554//h264Preview_01_main
 toilet_fallback_ssid: AAAbbbCCC
 toilet_fallback_passwd: AAAbbbCCC
 # NOT network credentials
-not_ssid: AAAbbbCCC
-not_passwd: AAAbbbCCC
+wifi_ssid: AAAbbbCCC
+wifi_outside_ssid: AAAbbbCCC
+wifi_passwd: AAAbbbCCC
